// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System|Button Inaccessible 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "color": "darkRed",
    }
  }
>
  Inaccessible button
</button>
`;

exports[`Storyshots Design System|Button Test Button 1`] = `
<button
  onClick={[Function]}
>
  Test Button
</button>
`;

exports[`Storyshots Icons Social Icons 1`] = `
Array [
  <svg
    className="twitter_svg__feather twitter_svg__feather-twitter"
    fill="none"
    height={24}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    width={24}
  >
    <path
      d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"
    />
  </svg>,
  <svg
    className="github_svg__feather github_svg__feather-github"
    fill="none"
    height={24}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    width={24}
  >
    <path
      d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0020 4.77 5.07 5.07 0 0019.91 1S18.73.65 16 2.48a13.38 13.38 0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 005 4.77a5.44 5.44 0 00-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 009 18.13V22"
    />
  </svg>,
  <svg
    className="linkedin_svg__feather linkedin_svg__feather-linkedin"
    fill="none"
    height={24}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    width={24}
  >
    <path
      d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"
    />
    <circle
      cx={4}
      cy={4}
      r={2}
    />
  </svg>,
  <svg
    className="twitch_svg__feather twitch_svg__feather-twitch"
    fill="none"
    height={24}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    width={24}
  >
    <path
      d="M21 2H3v16h5v4l4-4h5l4-4V2zm-10 9V7m5 4V7"
    />
  </svg>,
  <svg
    className="instagram_svg__feather instagram_svg__feather-instagram"
    fill="none"
    height={24}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    width={24}
  >
    <rect
      height={20}
      rx={5}
      ry={5}
      width={20}
      x={2}
      y={2}
    />
    <path
      d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zM17.5 6.5h.01"
    />
  </svg>,
]
`;
